fixed header and navbar on smaller screens

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -143,9 +143,6 @@ body {
 }
 
 @media (min-width: 1800px) {
-    /* header{
-		min-height: 50vw;
-	} */
     .container {
         max-width: 1800px;
     }
